# Travel-Dream-Simulator-Capstone-Project

./: AGENTS.md  Mockup_design.md  PRD Travel Dream Simulator.md  Proposal TDS.md  README.md  Requirement Travel Dream Simulator.md  Requirements.md  main.py  pyproject.toml  vercel.json
backend/: .env  .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: base.py  budget_agent.py  dream_interpreter.py  logistics_agent.py  memory_agent.py  research_agent.py
backend/app/api/: endpoints_trip.py
backend/app/core/: config.py
backend/app/integrations/: external.py
backend/app/models/: trip.py
backend/scripts/: benchmark_endpoints.py
backend/tests/: test_export_pdf.py  test_generate_includes_research_info.py  test_interpret_endpoint_normalization.py  test_interpret_fallback.py  test_interpret_normalization.py  test_research_mock.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/plan/: page.tsx
frontend/components/: ClarificationView.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  ItineraryView.tsx  LandingInput.tsx  Navbar.tsx  Testimonials.tsx
frontend/lib/: api.ts
notebooks/: demo_submission.ipynb
